doc: swagger documentation changed
