# packages/server/PostService/docs/swagger.json
@@ -261,7 +261,7 @@
             "patch": {
                 "description": "This endpoint allows a user to update an existing post with a new title, content, header image, and tags.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -279,13 +279,28 @@
                         "required": true
                     },
                     {
-                        "description": "Update post request body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/update.Request"
-                        }
+                        "type": "string",
+                        "description": "Title of the post",
+                        "name": "title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Content of the post",
+                        "name": "content",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Header image for the post",
+                        "name": "headerImage",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Optional tags associated with the post (e.g., [tag1,tag2])",
+                        "name": "tags",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -547,30 +562,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "update.Request": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string",
-                    "maxLength": 62792,
-                    "minLength": 1
-                },
-                "headerImage": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "title": {
-                    "type": "string",
-                    "maxLength": 128,
-                    "minLength": 1
                 }
             }
         }
